# smart-contract-starter

./: CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  build.sh  docker_build.sh
starter/: CMakeLists.txt  starter.wasm
